# ROSTurtleCheckersInterfaces

./: CMakeLists.txt  README.md  package.xml
msg/: AnnounceGameResult.msg  ChatMessage.msg  ClientHeartbeat.msg  DeclareWinner.msg  DrawDeclined.msg  DrawOffered.msg  ForceLogoutAccount.msg  GameStart.msg  GameState.msg  KickPlayer.msg  LogOutAccount.msg  OfferDraw.msg  PlayerJoinedLobby.msg  PlayerLeftLobby.msg  PlayerLoggedOut.msg  PlayerReadied.msg  PlayerReady.msg  ReportPlayer.msg  ServerHeartbeat.msg  SetPlayerBanned.msg  TimerChanged.msg  UpdateBoard.msg  UpdateChat.msg  UpdateGameState.msg  UpdateLobbyOwner.msg  UpdateTimer.msg
srv/: ChangeAccountPassword.srv  ConnectToGame.srv  ConnectToGameMaster.srv  CreateAccount.srv  CreateLobby.srv  GetLobbyList.srv  GetStatistics.srv  JoinLobby.srv  LogInAccount.srv  RequestBoardState.srv  RequestPieceMove.srv  RequestReachableTiles.srv  ResyncBoard.srv
